fix alignment bug and provided default verse

--- a/src/components/Verse/Votd.css
+++ b/src/components/Verse/Votd.css
@@ -21,6 +21,8 @@
  background-color: rgba(220,220,220,0.6);
  border-radius: 25px;
  line-height: 1.5;
+ display: flex;
+ align-items: stretch;
 }
 
 .Votd-ref {
